# Discrete-Math

./: CMakeLists.txt  README.md  lev-en.ts  lev-ru.ts  main.cpp  resource.qrc
Headers/: Calculator.h  ExpressionSymbol.h  GpuComputeTable.h  Operation.h  Variable.h  developer.h  gpu_settings.h  mainwindow.h
Kernels/: TableComputeKernel.cl  TableComputeKernel.clcpp
Source/: Calculator.cpp  ExpressionSymbol.cpp  GpuComputeTable.cpp  Operation.cpp  Variable.cpp  developer.cpp  developer.ui  gpu_settings.cpp  gpu_settings.ui  mainwindow.cpp  mainwindow.ui
style/: Diffnes.qss
